samples/_failures_safe/1761298922_28fcd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2433e01e.c: In function ‘main’:
./samples/SAFE/__tmp_2433e01e.c:173:9: error: expected declaration or statement at end of input
  173 |         printf("Empty input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_2433e01e.c:173:9: error: expected declaration or statement at end of input
